--- a/blog.html
+++ b/blog.html
@@ -51,7 +51,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-6">
-                        <h1 class="text-bold">Services</h1>
+                        <h1 class="text-bold">Blog</h1>
                         <br>
                         <p style="font-size: 12px;">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem <br>ipsum dolor sit amet
@@ -72,10 +72,9 @@
         </main>
     </header>
     <div class="color2">
-        <section class="sec8">
+        <br><br><br>
+        <section class="sec2">
             <div class="container">
-              <h1>Recent Blog</h1>
-              <br><br>
               <div class="row">
                 <div class="col img3">
                   <img src="./img/6226682065361947205.jpg" alt="" width="400" style="border-radius: 5%;">
@@ -96,13 +95,10 @@
                   <p>by Kristin Watson on Dec 19, 2021</p>
                 </div>
               </div>
-            </div>
             </div>
           </section>
-          <section class="sec8">
+          <section class="sec2">
             <div class="container">
-              <h1>Recent Blog</h1>
-              <br><br>
               <div class="row">
                 <div class="col img3">
                   <img src="./img/6226682065361947205.jpg" alt="" width="400" style="border-radius: 5%;">
@@ -123,13 +119,10 @@
                   <p>by Kristin Watson on Dec 19, 2021</p>
                 </div>
               </div>
-            </div>
             </div>
           </section>
-          <section class="sec8">
+          <section class="sec2">
             <div class="container">
-              <h1>Recent Blog</h1>
-              <br><br>
               <div class="row">
                 <div class="col img3">
                   <img src="./img/6226682065361947205.jpg" alt="" width="400" style="border-radius: 5%;">
@@ -151,9 +144,75 @@
                 </div>
               </div>
             </div>
+          </section>
+          <br><br><br>
+          <section class="text-center">
+            <div class="container">
+              <h1 class="text-center">Testimonials</h1>
+              <div id="carouselExampleIndicators" class="carousel slide">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <br><br><br><br>
+                    <p class="text-secondary">“Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus
+                      malesuada.<br> Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.<br>
+                      Pellentesque
+                      habitant morbi tristique senectus et netus et malesuada<br> fames ac turpis egestas. Integer convallis
+                      volutpat dui quis scelerisque.”</p>
+                    <br>
+                    <img src="./img/6226682065361947206.jpg" alt="" style="border-radius: 50px; width: 100px; height: 100px;">
+                    <h6>Maria Jones</h6>
+                    <p>CEO, Co-Founder, XYZ Inc.</p>
+                  </div>
+                  <div class="carousel-item">
+                    <br><br><br><br>
+                    <p class="text-secondary">“Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus
+                      malesuada.<br> Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.<br>
+                      Pellentesque
+                      habitant morbi tristique senectus et netus et malesuada<br> fames ac turpis egestas. Integer convallis
+                      volutpat dui quis scelerisque.”</p>
+                    <br>
+                    <img src="./img/6226682065361947206.jpg" alt="" style="border-radius: 50px; width: 100px; height: 100px;">
+                    <h6>Maria Jones</h6>
+                    <p>CEO, Co-Founder, XYZ Inc.</p>
+                  </div>
+                  <div class="carousel-item">
+                    <br><br><br><br>
+                    <p class="text-secondary">“Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus
+                      malesuada.<br> Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.<br>
+                      Pellentesque
+                      habitant morbi tristique senectus et netus et malesuada<br> fames ac turpis egestas. Integer convallis
+                      volutpat dui quis scelerisque.”</p>
+                    <br>
+                    <img src="./img/6226682065361947206.jpg" alt="" style="border-radius: 50px; width: 100px; height: 100px;">
+                    <h6>Maria Jones</h6>
+                    <p>CEO, Co-Founder, XYZ Inc.</p>
+                  </div>
+                </div>
+                <button class="carousel-control-prev bg-dark text-light" type="button"
+                  data-bs-target="#carouselExampleIndicators" data-bs-slide="prev"
+                  style="width: 60px; height: 60px; border-radius: 50px;">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next bg-dark text-light" type="button"
+                  data-bs-target="#carouselExampleIndicators" data-bs-slide="next"
+                  style="width: 60px; height: 60px; border-radius: 50px;">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
             </div>
           </section>
     </div>
+    <br><br>
     <section>
         <div class="container">
           <div class="row">
